# anime_cli

./: .gitignore  Cargo.toml  README.md
src/: macros.rs  main.rs  player.rs  saves.rs  scraper.rs
